# tracker

./: CMakeLists.txt  README.md
include/tracker/: image_processor.hpp  parameters.hpp
src/: histogram_model.cpp  image_processor.cpp  image_processor.hpp  main.cpp  tracker.cpp  tracker.hpp
vot15_car1/imgs/: names.txt
